@@ -10,6 +10,8 @@
 - Fixed typo in version function definition.
 - Moved some function implementation from types.h header to types.cpp.
 - Fixed bug in log redirection to file.
+- Added support of building under LoongArch32 and LoongArch64 architectures.
+- Added support of building under 32-bit and 64-bit RISC-V architectures.
 
 === 1.0.14 ===
 * Added lsp_xlimit function to limit ranges for both min < max and min >= max ranges.
